--- a/layouts/lectures/list.html
+++ b/layouts/lectures/list.html
@@ -5,9 +5,12 @@
           <tr>
                   <th>Date</th>
                   <th>Title</ht>
+                  <th>Recording</th>
           </tr>
   {{ range sort .Pages "Params.lecturedate" "asc" }}
-          <tr><td> {{ dateFormat "Monday, January 2, 2006" .Params.lecturedate }} </td><td> <a href="{{ .Permalink }}">{{ .Params.title }}</a> </tr>
+          <tr><td> {{ dateFormat "Monday, January 2, 2006" .Params.lecturedate }} </td>
+              <td> <a href="{{ .Permalink }}">{{ .Params.title }}</a>
+              <td> {{ with .Params.classrecording }} <a href="{{ . }}"> Recording </a> {{ end }} </td> </tr>
   {{end}}
   </table>
 </div>
