Fix link to disney movie.

--- a/layouts/shortcodes/links.html
+++ b/layouts/shortcodes/links.html
@@ -16,7 +16,7 @@
             {{ end }}
           {{ if (index $link "title") }}
           <li> <a href={{ (index $link "url") }}>{{ (index $link "title") }} </a>
-              {{ (index $link "desc") }}</li>
+              {{ (index $link "description") }}</li>
           {{ end }}
           {{ end }}
         {{ end }}
