--- a/layouts/shortcodes/UVa2.html
+++ b/layouts/shortcodes/UVa2.html
@@ -2,4 +2,4 @@
 {{ $id := (index $problem "id") }}
 {{ $name := (index $problem "name") }}
 
-<a href="https://onlinejudge.org/index.php?option=com_onlinejudge&Itemid=8&page=show_problem&problem={{$id}}"> {{ .Params.number }} - {{ $name }} </a> 
+<a href="https://onlinejudge.org/index.php?option=onlinejudge&Itemid=8&page=show_problem&problem={{$id}}"> {{ .Params.number }} - {{ $name }} </a> 
